# satmap_dataset

./: .envrc  .gitignore  Justfile  README.md  pyproject.toml  requirements.txt
configs/run/: README.md  base.json
configs/run/locations/: bagno_lawki_biebrzanski_park.json  gizycko_twierdza.json  goniadz.json  kampus_kakolwe.json  klodzko.json  ladzin.json  modlin.json  nysa.json  poligon_drawsko.json  poznan.json  przemysl.json  przezmierowo.json  sosnowiec.json  spudlow_pole.json  srebrna_gora.json  zagan_poligon.json  zelazny_most.json
scripts/: index_all_locations.py  manage_location_roots.py  merge_json_config.py  merge_years_fallback.py
src/satmap_dataset/: __init__.py  cli.py  config.py  logging_utils.py  models.py
src/satmap_dataset/geoportal/: __init__.py  http.py  wfs_client.py
src/satmap_dataset/pipeline/: __init__.py  aoi_preview.py  diagnostics.py  downloader.py  index_builder.py  mosaic.py  render.py  run_all.py  validator.py
tests/: _wfs_test_helpers.py  test_axis_order_regression.py  test_cli_bbox_input_mode.py  test_cli_json_params.py  test_cli_smoke.py  test_download_cache_and_modes.py  test_georef_output.py  test_index_aoi_preview.py  test_logging_utils.py  test_manifest_contains_exclusion_reasons.py  test_min_years_guard.py  test_models_schema.py  test_render_axis_mode_inference.py  test_render_helpers.py  test_run_all_index_reuse.py  test_strict_years_mode.py  test_wfs_client_grid_filter.py  test_year_filter_policy.py  test_year_filtering_from_wfs.py
