[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "satmap-dataset"
version = "0.1.0"
description = "Phase-1 scaffold for satellite map dataset pipeline."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "httpx",
  "aiofiles",
  "numpy",
  "pydantic>=2",
  "typer",
  "rich",
  "Pillow",
  "pyvips",
  "tifffile",
  "imagecodecs",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "pytest-cov",
]

[project.scripts]
satmap-dataset = "satmap_dataset.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
